--- a/README
+++ b/README
@@ -2,7 +2,7 @@ GNOME Internet Time applet
 
 Description:
 ------------
-A GNOME panel applet that dispays Swatch Internet Time in .beats.
+A GNOME panel applet that displays Swatch Internet Time in .beats.
 
 
 Pre-history:
